swagger and security done, only testing remains

--- a/travelAgencyApi/src/main/resources/application.properties
+++ b/travelAgencyApi/src/main/resources/application.properties
@@ -4,6 +4,13 @@ spring.datasource.username=root
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
-# contraseña para spring security
+# password for spring security
 spring.security.user.name=hackaboss
 spring.security.user.password=1234
+
+# enables api-docs and swagger-ui
+springdoc.api-docs.enabled = true
+springdoc.swagger-ui.enabled = true
+
+# url o ruta de swagger-ui
+springdoc.swagger-ui.path=/doc/swagger-ui.html
