basic testing for class TravelApiUtils done

--- a/travelAgencyApi/pom.xml
+++ b/travelAgencyApi/pom.xml
@@ -18,7 +18,23 @@
 	</properties>
 	<dependencies>
 
+		<!-- for testing, Junit -->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<scope>test</scope>
+		</dependency>
 
+
+
+
+
+		<!-- spring security -->
 		<dependency>
 			<groupId>org.springdoc</groupId>
 			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
